--- a/AirlineBookingSystem/AirlineBookingSystem.Notifications.Infrastructure/AirlineBookingSystem.Notifications.Infrastructure.csproj
+++ b/AirlineBookingSystem/AirlineBookingSystem.Notifications.Infrastructure/AirlineBookingSystem.Notifications.Infrastructure.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AirlineBookingSystem.Notifications.Core\AirlineBookingSystem.Notifications.Core.csproj" />
   </ItemGroup>
 
 </Project>
