--- a/AirlineBookingSystem/AirlineBookingSystem.Bookings.Api/AirlineBookingSystem.Bookings.Api.csproj
+++ b/AirlineBookingSystem/AirlineBookingSystem.Bookings.Api/AirlineBookingSystem.Bookings.Api.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AirlineBookingSystem.Bookings.Application\AirlineBookingSystem.Bookings.Application.csproj" />
     <ProjectReference Include="..\AirlineBookingSystem.Bookings.Infrastructure\AirlineBookingSystem.Bookings.Infrastructure.csproj" />
   </ItemGroup>
 
