--- a/AirlineBookingSystem/AirlineBookingSystem.Notifications.Api/AirlineBookingSystem.Notifications.Api.csproj
+++ b/AirlineBookingSystem/AirlineBookingSystem.Notifications.Api/AirlineBookingSystem.Notifications.Api.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AirlineBookingSystem.Notifications.Application\AirlineBookingSystem.Notifications.Application.csproj" />
     <ProjectReference Include="..\AirlineBookingSystem.Notifications.Core\AirlineBookingSystem.Notifications.Core.csproj" />
     <ProjectReference Include="..\AirlineBookingSystem.Notifications.Infrastructure\AirlineBookingSystem.Notifications.Infrastructure.csproj" />
   </ItemGroup>
